# Cat

./: .gitignore  CMakeLists.txt  CatEngine.sln  README.md  sources_list.txt
Application/: Application.vcxproj  CMakeLists.txt  imgui.ini  main.cpp
Application/gamedata/script/: main.py
Application/gamedata/shader/: sprite_f.glsl  sprite_v.glsl  test_f.glsl  test_v.glsl
Application/x64/Debug/: Application.exe.recipe  Application.ilk  vc142.idb
Application/x64/Debug/Application.tlog/: Application.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Application/x64/Release/: Application.exe.recipe  Application.iobj  Application.ipdb
Application/x64/Release/Application.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CatEngine/: CatEngine.vcxproj  CatEngine.vcxproj.filters
CatEngine/core/: callback_storage.cpp  callback_storage.h  common.h  engine.cpp  engine.h  game_window.cpp  game_window.h  glad.c  input_manager.cpp  input_manager.h  uuid.cpp  uuid.h  uuid_object.cpp  uuid_object.h
CatEngine/core/editor/: filesystem_tree_ui.cpp
CatEngine/core/utils/: callback_storage.h  callback_storage_inline.h  game_time.cpp  game_time.h  key_code.h  logger.cpp  logger.h  singleton.h  utilsbase.h
CatEngine/game/: game_object.cpp  game_object.h  game_object_inline.h
CatEngine/game/components/: camera.cpp  camera.h  component.cpp  component.h  cube.cpp  drawable.cpp  drawable.h  physic_body.cpp  physic_body.h  physical_body.cpp  physical_body.h  sprite.cpp  sprite.h  test_comp_rotator.cpp  test_comp_rotator.h  transform.cpp  transform.h
CatEngine/game/scene/: scene.cpp  scene.h  scene_inline.h  scene_manager.cpp  scene_manager.h  scene_manager_inline.h
CatEngine/graphics/: buffer.cpp  buffer.h  frame_buffer.cpp  frame_buffer.h  imgui_dark_theme.h  index_buffer.cpp  index_buffer.h  index_buffer_inline.h  piece.cpp  piece.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_inline.h
CatEngine/io/: resource_manager.cpp  resource_manager.h  resource_manager_inline.h
CatEngine/physics/: bp_layer_interfacу.cpp  bp_layer_interfacу.h  object_layer_pair_filter.cpp  object_vs_bp_layer_filter.cpp  physics_core.cpp  physics_core.h  utils.h
CatEngine/scripts/: script_api_3rd_party.cpp  script_api_3rd_party.h  script_api_core.cpp  script_api_core.h  script_api_game.cpp  script_api_game.h  script_api_graphics.cpp  script_api_graphics.h  script_api_scene.cpp  script_api_scene.h  script_common.h  script_core.cpp  script_core.h  scripts_core.cpp  scripts_core.h
CatEngine/x64/Debug/: CatEngine.dll.recipe  vc142.idb
CatEngine/x64/Debug/CatEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CatEngine.lastbuildstate  CatEngine.write.1u.tlog  link.1296.delete.1.tlog  link.19452.delete.1.tlog  link.19636.delete.1.tlog  link.2516.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
CatEngine/x64/Release/: CatEngine.dll.recipe  CatEngine.ipdb
CatEngine/x64/Release/CatEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CatEngine.lastbuildstate  CatEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Libs/soil/_debug/: soil.lib
Libs/soil/_release/: soil.lib
src/: CMakeLists.txt
src/core/: callback_storage.h  common.h  engine.cpp  engine_api.h  game_window.cpp  game_window.h  input_manager.cpp  input_manager.h  uuid_object.h
src/core/editor/: filesystem_tree_ui.h
src/core/utils/: game_time.cpp  game_time.h  key_code.h  logger.h
src/game/: game_object.cpp  game_object.h  game_object_inline.h
src/game/components/: component.cpp  component.h  cube.h  drawable.cpp  drawable.h  physical_body.cpp  sprite.h  transform.cpp  transform.h
src/game/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/graphics/: frame_buffer.cpp  index_buffer.h  piece.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vertex.h
src/io/: resource_manager.cpp  resource_manager.h  resource_manager_inline.h
src/physics/: bp_layer_interfacy.cpp  joltDebugRenderer.cpp  joltDebugRenderer.h  layers.h  object_layer_pair_filter.h  object_vs_bp_layer_filter.h  physics_core.cpp  physics_core.h
src/scripts/: script_api_3rd_party.cpp  script_api_3rd_party.h  script_api_core.cpp  script_api_core.h  script_api_game.cpp  script_api_game.h  script_api_graphics.cpp  script_api_graphics.h  script_api_scene.h  script_core.cpp
